src/objects/Airline_Input__c.object
<CustomObject>
    <description>Airline Input for sMAP case</description>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>Parent_Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Input_Date__c</fullName>
        <label>Airline Input Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Airline_Input__c</fullName>
        <label>Airline Input</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Airline_Input_by__c</fullName>
        <label>Airline Input by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Airline</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a valid airline account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Airline Headquarters, Airline Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Airline Inputs</relationshipLabel>
        <relationshipName>sMAP_Airline_Inputs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Manager_Backup_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Manager Backup 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Airline_Inputs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Manager_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Manager Backup 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Airline_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Manager_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Airline_Inputs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Airline__r.IATA_ISO_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline_for_input__c</fullName>
        <defaultValue>NOW()+2</defaultValue>
        <label>Deadline for input</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <formula>Parent_Case__r.IATA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IATA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Requested_Date__c</fullName>
        <label>Input Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Airline Inputs</relationshipLabel>
        <relationshipName>sMAP_Airline_Inputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Share_of_total_cash_sales__c</fullName>
        <label>Share of Total Cash Sales</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Airline Input</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Country__c</columns>
        <columns>Airline__c</columns>
        <columns>IATA_Code__c</columns>
        <columns>Share_of_total_cash_sales__c</columns>
        <columns>Parent_Case__c</columns>
        <columns>Deadline_for_input__c</columns>
        <columns>Input_Requested_Date__c</columns>
        <columns>Airline_Input__c</columns>
        <columns>Airline_Input_by__c</columns>
        <columns>Airline_Input_Date__c</columns>
        <columns>Country_Manager_del__c</columns>
        <columns>Country_Manager_Backup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IR</fullName>
        <columns>Country__c</columns>
        <columns>Airline__c</columns>
        <columns>IATA_Code__c</columns>
        <columns>Share_of_total_cash_sales__c</columns>
        <columns>Parent_Case__c</columns>
        <columns>Deadline_for_input__c</columns>
        <columns>Input_Requested_Date__c</columns>
        <columns>Airline_Input__c</columns>
        <columns>Airline_Input_by__c</columns>
        <columns>Airline_Input_Date__c</columns>
        <columns>Country_Manager_del__c</columns>
        <columns>Country_Manager_Backup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Airline_Input_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Input Received</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>adltd</fullName>
        <columns>Country__c</columns>
        <columns>Airline__c</columns>
        <columns>IATA_Code__c</columns>
        <columns>Share_of_total_cash_sales__c</columns>
        <columns>Parent_Case__c</columns>
        <columns>Deadline_for_input__c</columns>
        <columns>Input_Requested_Date__c</columns>
        <columns>Airline_Input__c</columns>
        <columns>Airline_Input_by__c</columns>
        <columns>Airline_Input_Date__c</columns>
        <columns>Country_Manager_del__c</columns>
        <columns>Country_Manager_Backup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deadline_for_input__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <label>All - deadline last 10 days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>irpi</fullName>
        <columns>Country__c</columns>
        <columns>Airline__c</columns>
        <columns>IATA_Code__c</columns>
        <columns>Share_of_total_cash_sales__c</columns>
        <columns>Parent_Case__c</columns>
        <columns>Deadline_for_input__c</columns>
        <columns>Input_Requested_Date__c</columns>
        <columns>Airline_Input__c</columns>
        <columns>Airline_Input_by__c</columns>
        <columns>Airline_Input_Date__c</columns>
        <columns>Country_Manager_del__c</columns>
        <columns>Country_Manager_Backup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Input_Requested_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Airline_Input_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Input requested - Pending input</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>pir</fullName>
        <columns>Country__c</columns>
        <columns>Airline__c</columns>
        <columns>IATA_Code__c</columns>
        <columns>Share_of_total_cash_sales__c</columns>
        <columns>Parent_Case__c</columns>
        <columns>Deadline_for_input__c</columns>
        <columns>Input_Requested_Date__c</columns>
        <columns>Airline_Input__c</columns>
        <columns>Airline_Input_by__c</columns>
        <columns>Airline_Input_Date__c</columns>
        <columns>Country_Manager_del__c</columns>
        <columns>Country_Manager_Backup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Input_Requested_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Pending input request</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>sMAP-{YYYY}{MM}-{0000}</displayFormat>
        <label>sMAP-Airline Input Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airline Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>